@@ -104,8 +104,12 @@ IRC: mst#irc.perl.org contributed the initial Makefile.PL
 Rich Walker <rw @ shadowrobot.com> has provided assistance in the dists/deb 
 documentation for Debian installations.
 
+Hilton Day < hilton.day @ gmail.com > has contributed a fix for the RPM build 
+process.
+
 Steven Marshall <steven.marshall @ tatylee.com> Contributed a bug fix for the 
 menu.
+
 
 Original Authors of SQL-Ledger:
 ===================================
